# Block_Map_from_Groundtruth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: cfg.yaml  cfg_m2dgr.yaml  cfg_nclt.yaml
config/patchwork/: params.yaml
include/: patchwork.hpp
launch/: run.launch  run_m2dgr.launch  run_nclt.launch
scripts/: inverse.py  kml2txt.py  process_gt.py  process_gt_m2dgr.py  trans_gt_tolidar.py
src/: bm_generator.cpp
